# autocommand

./: .gitignore  .travis.yml  MANIFEST.in  README.md  README.rst  autocommand.py  autocommand.sublime-project  automain.py  pyproject.toml  setup.py  test.py  test_requirements.txt
.github/workflows/: python-app.yml
src/: autocommand.py
src/autocommand/: __init__.py  autoasync.py  autocommand.py  automain.py  autoparse.py  errors.py
test/: test_annotation.py  test_argument_maker.py  test_arguments.py  test_async.py  test_autoasync.py  test_autocommand.py  test_automain.py  test_errors.py  test_execution.py  test_helpers.py  test_markers.py  test_smart_open.py
test/test_autoparse/: README.md  conftest.py  test_annotations.py  test_bad_signature.py  test_basic_autoparse.py  test_invocation.py  test_single_flags.py  test_smart_open.py  test_types.py
util/: README.md  test.sh
